@startuml

title __SERVICES's Class Diagram__\n

  namespace nl.han.oose.jellema.rick.servicelayer {
    class nl.han.oose.jellema.rick.servicelayer.Cache {
        - cache : HashMap<String, UserDTO>
        + addToCache()
        + getUser()
        + userExists()
    }
  }
  

  namespace nl.han.oose.jellema.rick.servicelayer {
    class nl.han.oose.jellema.rick.servicelayer.LoginService {
        + checkAuthentication()
        + setCacheService()
        + setTokenDealerService()
        - authenticateUserPasswords()
    }
  }
  

  namespace nl.han.oose.jellema.rick.servicelayer {
    class nl.han.oose.jellema.rick.servicelayer.PlaylistService {
        + addTrack()
        + createPlaylist()
        + deletePlaylist()
        + deleteTrack()
        + editPlaylist()
        + getPlaylists()
        + getTracksOfPlaylist()
        + setCacheService()
        + setPlaylistsDao()
        + setTracksDao()
    }
  }
  

  namespace nl.han.oose.jellema.rick.servicelayer {
    class nl.han.oose.jellema.rick.servicelayer.TokenDealer {
        - uuidSupplier : Supplier<UUID>
        + aquireToken()
    }
  }
  

  namespace nl.han.oose.jellema.rick.servicelayer {
    class nl.han.oose.jellema.rick.servicelayer.TracksService {
        + getTracksNotInPlaylist()
        + setCache()
        + setDao()
    }
  }
  

  nl.han.oose.jellema.rick.servicelayer.Cache .up.|> nl.han.oose.jellema.rick.resourcelayer.ICache
  nl.han.oose.jellema.rick.servicelayer.LoginService .up.|> nl.han.oose.jellema.rick.resourcelayer.ILoginService
  nl.han.oose.jellema.rick.servicelayer.LoginService o-- nl.han.oose.jellema.rick.resourcelayer.ICache : cache
  nl.han.oose.jellema.rick.servicelayer.LoginService o-- nl.han.oose.jellema.rick.resourcelayer.ITokenDealer : dealer
  nl.han.oose.jellema.rick.servicelayer.PlaylistService .up.|> nl.han.oose.jellema.rick.resourcelayer.IPlaylistService
  nl.han.oose.jellema.rick.servicelayer.PlaylistService o-- nl.han.oose.jellema.rick.resourcelayer.ICache : cache
  nl.han.oose.jellema.rick.servicelayer.PlaylistService o-- nl.han.oose.jellema.rick.servicelayer.services.IPlaylistsDao : playlistsDao
  nl.han.oose.jellema.rick.servicelayer.PlaylistService o-- nl.han.oose.jellema.rick.servicelayer.services.ITracksDao : tracksDao
  nl.han.oose.jellema.rick.servicelayer.TokenDealer .up.|> nl.han.oose.jellema.rick.resourcelayer.ITokenDealer
  nl.han.oose.jellema.rick.servicelayer.TracksService .up.|> nl.han.oose.jellema.rick.resourcelayer.ITracksService
  nl.han.oose.jellema.rick.servicelayer.TracksService o-- nl.han.oose.jellema.rick.resourcelayer.ICache : cache
  nl.han.oose.jellema.rick.servicelayer.TracksService o-- nl.han.oose.jellema.rick.servicelayer.services.ITracksDao : dao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
